# sherlock-fox

./: .gitattributes  .gitignore  Cargo.toml  REUSE.toml  index.html  rust-toolchain.toml  sherlock-fox.js  sherlock-fox_bg.wasm
.cargo/: config.toml
.github/workflows/: static.yml
furlock/: Cargo.toml  rustfmt.toml
furlock/src/: clues.rs  main.rs  puzzle.rs
sherlock-fox/: .gitattributes  Cargo.toml
sherlock-fox/assets/: arrow-shaft.acorn
sherlock-fox/src/: animation.rs  clues.rs  fit.rs  main.rs  puzzle.rs  undo.rs
