# © 2025 <_@habnab.it>
#
# SPDX-License-Identifier: EUPL-1.2

[workspace]
resolver = "2"
members = [
    "sherlock-fox",
]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
