# © 2025 <_@habnab.it>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "furlock"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

[dependencies]
bevy = { version = "0.15.2", features = ["dynamic_linking", "jpeg"] }
bevy-inspector-egui = "0.29.1"
fixedbitset = "0.5.7"
getrandom = { version = "0.3.1", features = ["wasm_js"] }
petgraph = { version = "0.6", default-features = false }
rand = "0.9.0"
rand_chacha = "0.9.0"
uuid = { version = "~1.12.1", features = ["v4"] }
